2011-01-17  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: refactoring: encapsulate lazy initialization of SourceFrame.
        https://bugs.webkit.org/show_bug.cgi?id=51738

        * http/tests/inspector/debugger-test2.js:
        (initialize_DebuggerTest.InspectorTest.showScriptSource):
        (initialize_DebuggerTest.InspectorTest._showScriptSource):
        * inspector/debugger-pause-in-eval-script-expected.txt:
        * inspector/debugger-pause-in-eval-script.html:

2011-01-17  John Knottenbelt  <jknotten@chromium.org>

        Reviewed by Jeremy Orlow.

        GeolocationController should call stopUpdating on destruction
        https://bugs.webkit.org/show_bug.cgi?id=52216

        fast/dom/window-close-crash.html tests that we do not fail the
        assertion in the mock GeolocationClient that the GeolocationClient
        is not updating when the GeolocationController is destroyed.

        * fast/dom/Geolocation/resources/window-close-popup.html: Added.
        * fast/dom/Geolocation/script-tests/window-close-crash.js: Added.
        (gotPosition):
        (waitForWindowToClose):
        (failedToCreateWatch):
        * fast/dom/Geolocation/window-close-crash-expected.txt: Added.
        * fast/dom/Geolocation/window-close-crash.html: Added.
        * platform/gtk/Skipped:
        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:

2011-01-14  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Enable inspector's tests for chromium Linux.
        https://bugs.webkit.org/show_bug.cgi?id=52445

        * platform/chromium/inspector/timeline-network-resource-expected.txt:
        * platform/chromium/test_expectations.txt:

2011-01-17  Helder Correia  <helder@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] fast/canvas/canvas-fillPath-gradient-shadow.html does not pass