@@ -29,7 +29,8 @@ document.getElementById('o4').disabled = true;
 shouldBe('datalist.options.length', '3');
 
 var successfullyParsed = true;
-// The expected text should not contain the text in the datalist element.
+// After datalist is implemented, the expected text should not contain the
+// text in the datalist element.
 </script>
 <script src="../../fast/js/resources/js-test-post.js"></script>
 </body>
