@@ -537,10 +537,6 @@ select[size="1"] {
     white-space: pre;
 }
 
-datalist {
-    display: none;
-}
-
 optgroup {
     font-weight: bolder;
 }
