@@ -1,3 +1,12 @@
+2011-01-17  Anthony Ricaud  <rik@webkit.org>
+
+        Reviewed by Kent Tamura.
+
+        [HTML5] Revert display:none on datalist
+        https://bugs.webkit.org/show_bug.cgi?id=52214
+
+        * css/html.css:
+
 2011-01-17  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
