@@ -1,3 +1,14 @@
+2011-01-17  Anthony Ricaud  <rik@webkit.org>
+
+        Reviewed by Kent Tamura.
+
+        [HTML5] Revert display:none on datalist
+        https://bugs.webkit.org/show_bug.cgi?id=52214
+
+        * fast/forms/datalist-expected.txt:
+        * fast/forms/datalist-nonoption-child-expected.txt:
+        * fast/forms/datalist.html:
+
 2011-01-17  Pavel Podivilov  <podivilov@chromium.org>
 
         Reviewed by Pavel Feldman.
